# Debug

./: README.md
auto-wifi-network/: Makefile
auto-wifi-network/docs/: DECO组网2.0设计.doc  DECO组网功能规范.md
auto-wifi-network/src/: Makefile  ai_config.c  ai_config.h  ai_nwk_defines.h  ai_ping.c  aimsg_handler.c  aimsg_handler.h  auto_wifi_net.c  auto_wifi_net.h  awn_config.c  awn_log.c  awn_log.h  awn_plcson_netlink.c  awn_plcson_netlink.h  awn_rate_estimate.c  awn_ubus.h  awn_ubus_client.c  awn_ubus_server.c  awn_wifi_handler_api.c  awn_wifi_handler_api.h  ping.h
auto-wifi-network/src/bcm/: awn_wifi_handler_bcm.c  awn_wifi_handler_bcm.h
auto-wifi-network/src/mtk/: awn_cfg80211_mtk.c  awn_cfg80211_mtk.h  awn_wifi_handler_mtk.c  awn_wifi_handler_mtk.h
auto-wifi-network/src/qca/: awn_wifi_handler_cfg80211_qca.c  awn_wifi_handler_cfg80211_qca.h  awn_wifi_handler_qca.c  awn_wifi_handler_qca.h
sync-server/: Makefile
sync-server/docs/: Checklist.md  README.md  cmd.md  probe_readme.md
sync-server/src/: CMakeLists.txt  comp_whole_leave.lua  deco_on_off_iface.lua  delete_record_check_cron  group-key.init  notify-iot-role  sync-script.lua  sync-server.c  sync-server.init  sync-server.lua  sync.hotplug.ip  update-info.lua
sync-server/src/scripts/: delete-info  delete_record_later.lua  detect-re  firmware  firmwareLte  get-info  get-tipc-config  probe  request  short-request  sync-config
sync-server/src/scripts-iot/: detect-re  firmware  firmware-old  force-sync  get-info  probe  probe_emmc  request  sync-config  sync-config_emmc
(+11 files in other folders)
